Fixed path to browser_4kc.js in terminal.html

--- a/html/terminal.html
+++ b/html/terminal.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <script src="http://code.jquery.com/jquery-latest.js"></script>
-<script src="../js/browser_4kc.js"></script>
+<script src="../js/browser/browser_4kc.js"></script>
 </head>
 <body>
 <h2>Browser 4kc Test Terminal</h2>
