Made test terminal webpage prettier.

--- a/html/terminal.html
+++ b/html/terminal.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <script src="http://code.jquery.com/jquery-latest.js"></script>
+<link href="terminal.css" rel="stylesheet"/>
 <script src="../js/browser/browser_4kc.js"></script>
+</script>
 </head>
 <body>
-<h2>Browser 4kc Test Terminal</h2>
-<div id="sse">
-   <p/><textarea rows="10" cols="100" id="terminal"></textarea>
-</div>
+<h2>MIPS 4Kc Emulator Terminal</h2>
+   <p/><div class="terminal"><div class="terminal-output"></div></div>
 </body>
 </html>
